scripts/nullaway/annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8.txt
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:30: error: [NullAway] initializer method does not guarantee @NonNull field special_dir (line 23) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CoreRoom(Grid grid) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Schematic room_map = null;
	                  ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:124: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:153: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:119: error: [NullAway] dereferenced expression tmp is @Nullable
		if (!tmp.isEmpty()) {
		        ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:36: error: [NullAway] dereferenced expression l is @Nullable
		l.show();
		 ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:120: error: [NullAway] dereferenced expression tmp is @Nullable
	    if(!tmp.isEmpty()) {
	           ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:40: error: [NullAway] dereferenced expression grid is @Nullable
		grid.show();
		    ^
    (see http://t.uber.com/nullaway )
../annotator/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:41: error: [NullAway] dereferenced expression start is @Nullable
		System.out.println(" Start" + start.toString() + ":" + startDir
		                                   ^
    (see http://t.uber.com/nullaway )
9 errors
